fix: Use stdin to pass prompt to gemini-cli

--- a/action.yml
+++ b/action.yml
@@ -103,7 +103,7 @@ runs:
       if: steps.prepare.outputs.contains_trigger == 'true'
       shell: bash
       run: |
-        gemini --prompt-file ${{ runner.temp }}/gemini-prompts/gemini-prompt.txt --model ${{ inputs.model }} --yolo > ${{ runner.temp }}/gemini-output.json
+        cat ${{ runner.temp }}/gemini-prompts/gemini-prompt.txt | gemini --model ${{ inputs.model }} --yolo > ${{ runner.temp }}/gemini-output.json
         echo "execution_file=${{ runner.temp }}/gemini-output.json" >> $GITHUB_OUTPUT
       env:
         GEMINI_API_KEY: ${{ inputs.gemini_api_key }}
